--- a/about.css
+++ b/about.css
@@ -46,3 +46,28 @@
     color: white;
     font-size: 18px;
 }
+.section2 {
+    display: flex;
+    margin-left: 20px;
+    margin-top: -120px;
+}
+#box {
+    border: solid rgb(162, 174, 243);
+    box-shadow: 15px rgb(152, 178, 247);
+    width: 250px;
+    height: 230px;
+    text-align: center;
+    padding-top: 30px;
+    border-radius: 15px;
+    margin-left: 30px;
+    background-color: rgb(209, 204, 204);
+}
+#box h4 {
+    color: blue;
+}
+#box p {
+    text-shadow: 5px black;
+}
+#intro {
+    font-size: 30px;
+}
