--- a/index.css
+++ b/index.css
@@ -1,3 +1,10 @@
+@media only screen and (max-width: 600px) {
+    body {
+      width: 100%;
+      height: 100%;
+      background-color: lightgreen;
+    }
+  }
 .header {
     background-image: url("images/background.jpeg");
     background-size: 50%;
